--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,14 @@ header.sticky{
 	font-size: var(--p-font);
 }
 
+#abc{
+	box-shadow: 18px 0px 87px 0px rgb(10 15 70 / 6%);
+
+}
+#abc-up{
+   padding-top: px;
+}
+
 .contact{
 	background: #8067f0eb;
 	width: 64%;
